megafix with latest java dependencies and all tests passing
all tests pass, js deps come next