@@ -28,11 +28,11 @@
 		<jetty-stop-port>8991</jetty-stop-port>
 		<jetty-context-path>/</jetty-context-path>
 		<webapp-prefix>http://localhost:${jetty-http-port}${jetty-context-path}/</webapp-prefix>
-		<dagger-2-version>2.29.1</dagger-2-version>
-		<jackson-2-version>2.12.1</jackson-2-version>
-		<jetty-version>10.0.0</jetty-version>
-		<jtwig-version>5.87.0.RELEASE</jtwig-version>
-		<morfeu-version>0.8.11</morfeu-version>
+		<dagger-2-version>2.51.1</dagger-2-version>
+		<jackson-2-version>2.17.1</jackson-2-version>
+		<jetty-version>12.0.8</jetty-version>
+		<freemarker-version>2.3.33</freemarker-version>
+		<morfeu-version>0.8.18-SNAPSHOT</morfeu-version>
 		<selenide-version>5.6.1</selenide-version>
 		<selenium-version>3.141.59</selenium-version>
 		<jupiter-version>5.5.2</jupiter-version>
@@ -41,6 +41,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<scm.host_>github.com</scm.host_>
 		<developer.id_>danigiri</developer.id_>
+		<maven.compiler.release>20</maven.compiler.release>
 		<checkout.folder_>${project.build.directory}/../src/main/angular</checkout.folder_>	<!-- release perform /target/ folder -->
 	</properties>
 
@@ -84,10 +85,8 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>3.13.0</version>
 				<configuration>
-					<source>11</source>
-					<target>11</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>com.google.dagger</groupId>
@@ -101,7 +100,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.0.2</version>
+				<version>3.4.1</version>
 				<executions>
 					<execution>
 						<goals>
@@ -114,7 +113,7 @@
 			<plugin>	<!--  mvn package war:war install -DarchiveClasses=true -DattachClasses=true -DskipITs -DskipTests=true -Djetty.skip -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>3.2.2</version>
+				<version>3.4.0</version>
 				<configuration>
 					<webResources>
 						<resource>	<!-- the images of resources like the code slots make it to the war -->
@@ -132,7 +131,7 @@
 			<plugin>	<!-- we specift the name of the releases -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>3.0.0-M1</version>
+				<version>3.0.1</version>
 				<configuration>
 					<tagNameFormat>v@{project.version}</tagNameFormat>
 				</configuration>
@@ -140,11 +139,11 @@
 			<plugin>	<!-- when doing a release:perform, the project is checked out freshly, need a npm install -->
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
-				<version>3.0.0</version>
+				<version>3.2.0</version>
 				<executions>
 					<execution>
 						<id>install-npm</id>
-						<phase>process-test-resources</phase>
+						<phase>package</phase>
 						<goals>
 							<goal>exec</goal>
 						</goals>
@@ -162,27 +161,26 @@
 			</plugin>
 
 			<plugin>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
+				<groupId>org.eclipse.jetty.ee9</groupId>
+				<artifactId>jetty-ee9-maven-plugin</artifactId>
 				<version>${jetty-version}</version>
 				<dependencies>	<!--  to add GZIP compression -->
-					<dependency>
-						<groupId>org.eclipse.jetty</groupId>
-						<artifactId>jetty-servlets</artifactId>
-						<version>${jetty-version}</version>
-					</dependency>
 				</dependencies>
 				<configuration>
-					<dumpOnStart>false</dumpOnStart> <!-- set to true for debugging -->
-					<scanIntervalSeconds>0</scanIntervalSeconds>
-					<reload>manual</reload>
+					<!-- looks like we have some code trying to access private
+					methods for  java.util.OptionalInt() -->
+					<!-- only if if we run in forked mode this is picked up -->
+					<jvmArgs>--add-opens=java.base/java.util=ALL-UNNAMED</jvmArgs>
+					<!--dumpOnStart>false</dumpOnStart--> <!-- set to true for debugging -->
+					<!--scanIntervalSeconds>0</scanIntervalSeconds-->
+					<!--reload>manual</reload-->
 					<stopPort>${jetty-stop-port}</stopPort>
 					<stopKey>STOP</stopKey>
 					<useTestScope>true</useTestScope>
 					<webApp>
 						<contextPath>${jetty-context-path}</contextPath>
 						<!-- we add this extra classpath so jetty loads templates and all jar deps like jackson and stuff -->
-						<extraClasspath>${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/lib</extraClasspath>
+						<!--extraClasspath>${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/lib</extraClasspath-->
 						<resourceBases>
 							<resourceBase>${project.basedir}/src/main/angular/src/assets</resourceBase>
 							<resourceBase>${project.basedir}/src/test/resources</resourceBase>
@@ -237,7 +235,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>3.2.5</version>
 				<configuration>
 					<excludes>	<!-- no UI/integration tests in unit testing -->
 						<exclude>**/*IntTest*</exclude>
@@ -249,7 +247,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>3.2.5</version>
 				<configuration>
 					<systemPropertyVariables>
 						<TMP_FOLDER>${project.build.directory}/integration-tests-tmp</TMP_FOLDER>
@@ -309,12 +307,6 @@
 			<version>${dagger-2-version}</version>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>javax.inject</groupId>
-			<artifactId>javax.inject</artifactId>
-			<version>1.0.0.redhat-6</version>
-			<!-- scope>provided</scope -->
-		</dependency>
 
 		<!-- Jackson JSON lib stuff -->
 		 <!-- the core, which includes Streaming API, shared low-level abstractions (but NOT data-binding) -->
@@ -356,17 +348,23 @@
 			<version>${jetty-version}</version>
 			<scope>provided</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
+			<version>5.0.0</version>
+			<scope>provided</scope>
+		</dependency>
+		
 		<!-- HELPERS -->
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.6</version>
+			<version>2.16.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpasyncclient</artifactId>
-			<version>4.1.4.redhat-00001</version>
+			<version>4.1.5</version>
 		</dependency>
 
 		<!-- logging -->
@@ -384,47 +382,36 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>2.0.0-alpha1</version>
+			<version>2.0.13</version>
 		</dependency>
-
+		
 		<!--  templating -->
 		<dependency>
-			<groupId>org.jtwig</groupId>
-			<artifactId>jtwig-core</artifactId>
-			<version>${jtwig-version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jtwig</groupId>
-			<artifactId>jtwig-reflection</artifactId>
-			<version>${jtwig-version}</version>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>${freemarker-version}</version>
 		</dependency>
 
 		<!-- request proxying -->
 		<dependency>
 			<groupId>org.mitre.dsmiley.httpproxy</groupId>
 			<artifactId>smiley-http-proxy-servlet</artifactId>
-			<version>1.11</version>
+			<version>2.0</version>
 		</dependency>
 
 		<!-- process execution -->
 		<dependency>
 			<groupId>org.zeroturnaround</groupId>
 			<artifactId>zt-exec</artifactId>
-			<version>1.11</version>
+			<version>1.12</version>
 		</dependency>
 		<dependency>
 			<groupId>org.zeroturnaround</groupId>
 			<artifactId>zt-process-killer</artifactId>
-			<version>1.10</version>
+			<version>1.11</version>
 		</dependency>
 
 		<!-- UNIT TESTING -->
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<version>${jupiter-version}</version>
-			<scope>test</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
@@ -432,27 +419,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.junit.vintage</groupId>
-			<artifactId>junit-vintage-engine</artifactId>
-			<version>${jupiter-version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.platform</groupId>
-			<artifactId>junit-platform-launcher</artifactId>
-			<version>${junit-platform-version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.platform</groupId>
-			<artifactId>junit-platform-runner</artifactId>
-			<version>${junit-platform-version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>3.2.4</version>
+			<version>5.11.0</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -460,7 +429,7 @@
 		<dependency>	<!-- web driver manager -->
 			<groupId>io.github.bonigarcia</groupId>
 			<artifactId>webdrivermanager</artifactId>
-			<version>3.7.1</version>
+			<version>5.8.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -518,34 +487,19 @@
 		<dependency>
 			<groupId>org.xmlunit</groupId>
 			<artifactId>xmlunit-core</artifactId>
-			<version>2.6.3</version>
+			<version>2.9.1</version>
 		</dependency>
 
 	</dependencies>
 
-
 	<repositories>
-		<repository>
-			<id>Apache-releases</id>
-			<name>Apache releases</name>
-			<url>https://repository.apache.org/content/repositories/releases</url>
-		</repository>
-		<repository>
-			<id>RedHat-GA</id>
-			<name>RedHat GA repository</name>
-			<url>https://maven.repository.redhat.com/ga/</url>
-		</repository>
-		<repository>
-			<id>jcenter</id>
-			<url>https://jcenter.bintray.com/</url>
-		</repository>
 	</repositories>
 
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
 			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
-			<comments>Copyright (C) 2021 Daniel Giribet</comments>
+			<comments>Copyright (C) 2024 Daniel Giribet</comments>
 		</license>
 	</licenses>
 
@@ -564,4 +518,3 @@
 	</developers>
 
 </project>
-
